# Polymer-Agent1

./: .gitignore  README.md  pyproject.toml  setup.py
OpenMacromolecularGenome/: README.md  environment.yml
OpenMacromolecularGenome/analysis/: combined_scores_plot.py  latent_space_overlay.py  pca_png.py  sa_score.py  scs_analysis.py
OpenMacromolecularGenome/generation/selfies/: bond_constraints.py  compatibility.py  decoder.py  encoder.py  grammar_rules.py  mol_graph.py
OpenMacromolecularGenome/generation/selfies/utils/: encoding_utils.py  smiles_utils.py
OpenMacromolecularGenome/generation/vae/: preprocess.py
OpenMacromolecularGenome/molecule_chef/: __init__.py
OpenMacromolecularGenome/scripts/train/: finetune_multiproperty_vae.py  finetune_singleproperty_optuna.py  optimize_multiproperty_latent_space.py  vae_optuna_parallel.py
OpenMacromolecularGenome/scscore/: scscore.py
OpenMacromolecularGenome/testing/: test_prediction.py
OpenMacromolecularGenome/train/: finetune_singleproperty_vae.py  omg_test.py  vae_latent_space_linear_interpolation.py  vae_latent_space_visualization.py
RESULTS/: latent_pca.joblib  latent_scaler.joblib  latent_space_with_generated.eps  latent_space_with_generated.tif
RESULTS/optimized_multiproperty_results/: optimized_polymers_multiproperty.csv
finetuned_multiproperty_model_copy/: property_predictor_multiproperty.pth  property_scaler.pth  vae_parameters_multiproperty.pth
finetuned_multiproperty_model_copy/checkpoints/: multiprop_epoch_20.pth  multiprop_epoch_40.pth  multiprop_epoch_50.pth
